# workday-API

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  secrets.workday.json.example
docs/: workday-overview.md  workday_rest_custom_objects_setup.md
examples/: oauth_get_bearer_token.py  raas_json.py  rest_custom_object_definitions.py  soap_get_historical_academic_records.py  soap_get_student_recruitments.py
src/workday_api/: __init__.py  api.py  auth.py  config.py  logging.py  rest.py  soap.py  xml_debug.py
tests/: test_api.py  test_auth.py  test_config.py  test_rest.py  test_soap.py  test_soap_auth_e2e.py  test_xml_debug.py
